--- a/src/main/resources/themes/dark.css
+++ b/src/main/resources/themes/dark.css
@@ -43,3 +43,7 @@
 #scrollPane .corner{
     -fx-background-insets: 0;
 }
+.main-code-area .lineno{
+-fx-background-color:#292929;
+-fx-fill:#4a4a4a;
+}
