--- a/src/main/resources/themes/light.css
+++ b/src/main/resources/themes/light.css
@@ -43,3 +43,7 @@
 #scrollPane .corner{
     -fx-background-insets: 0;
 }
+.main-code-area .lineno{
+-fx-background-color:#dedede;
+-fx-fill:#0f0f0f;
+}
