--- a/src/main/resources/themes/light.css
+++ b/src/main/resources/themes/light.css
@@ -1,3 +1,7 @@
+.root{
+-fx-background-color:#d1d1d1;
+-fx-font-size:13;
+}
 #mainCodeArea{
 -fx-background-color:#dedede;
 -fx-font-size:15;
@@ -6,7 +10,36 @@
 #mainCodeArea .text{
  -fx-fill:#0f0f0f;
 }
-
+.settingsButton{
+-fx-text-fill:#0f0f0f;
+-fx-background-color:#bdbbbb;
+}
+.settingsButton:hover{
+-fx-background-color:#c4c4c4;
+-fx-cursor:hand;
+}
+.leaveButton{
+-fx-text-fill:#0f0f0f;
+-fx-background-color:#bdbbbb;
+}
+.leaveButton:hover{
+-fx-background-color:#c4c4c4;
+-fx-cursor:hand;
+}
+.labelC{
+-fx-font-size:17;
+-fx-text-fill:#0f0f0f;
+}
+#returnButton{
+-fx-background-color:#048200;
+-fx-border-color:#036100;
+-fx-border-width:2px;
+}
+#returnButton:hover{
+-fx-background-color:#068f01;
+-fx-border-color:#036100;
+-fx-border-width:2px;
+}
 .terminalTextArea{
     -fx-background-color:rgb(10,10,10);
     -fx-color:rgb(156, 0, 0);
@@ -16,9 +49,11 @@
 }
 .menuBar, .menuBar .menu-item, .menuBar .context-menu {
     -fx-background-color:#becbd1;
+        -fx-cursor:hand;
 }
 .menuBar .menu-item:hover {
     -fx-background-color: #9ea8ad ;
+        -fx-cursor:hand;
 }
 .menuBar .menu-item .label {
     -fx-text-fill: #000000;
