--- a/src/main/resources/themes/dark.css
+++ b/src/main/resources/themes/dark.css
@@ -1,11 +1,6 @@
-/*@font-face{
- font-family: "miracode";
-  src:url("src/main/resources/fonts/Miracode.ttf");
-}*/
 
 .root{
 -fx-background-color:#212020;
--fx-font-size:13;
 }
 #mainCodeArea{
 -fx-background-color:#292929;
@@ -90,6 +85,9 @@
 .main-code-area .lineno{
 -fx-background-color:#292929;
 -fx-fill:#4a4a4a;
+}
+.main-code-area .text:selected{
+    -fx-background-color: #505050;
 }
 .settingsPane{
 -fx-background-color:#292929;
